--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,6 @@
 (library
  (name kaleidoscope_lib)
  (libraries 
-   angstrom
    async
    core
    ctypes.foreign
@@ -15,13 +14,13 @@
  (inline_tests))
 
 (rule
- (targets ocamllexer.ml)
-  (deps ocamllexer.mll)
+ (targets lexer.ml)
+  (deps lexer.mll)
   (action (run %{bin:ocamllex} -q -o %{targets} %{deps})))
 
 (rule 
- (targets menhir_parser.mli menhir_parser.ml)
-  (deps menhir_parser.mly)
+ (targets parser.mli parser.ml)
+  (deps parser.mly)
   (action (run menhir --external-tokens Ast --explain --table %{deps})))
 
 (env
